adding missing reference

--- a/references/index.html
+++ b/references/index.html
@@ -70,7 +70,7 @@
 							<li>Novella, Steven.  Autonomous Cars and Ethics.  NeuroLogica Blog.  2015.   http://wpi.aci.info/view/1427c3f7cbf114a0104/15116537d2800010003</li>
 							<li>Annual report warns that driverless cars could disrupt AllState’s insurance business.  2016.  http://www.driverless-future.com/?p=911</li>
 							<li>Lin, Patrick [Ted-ed].  (December 8, 2015).  The ethical dilemma of self-driving cars.  https://www.youtube.com/watch?v=ixIoDYVfKA0</li>
-							<li></li>
+							<li>John Hines.  (May 13, 2014).  Silicon Valley - Driverless Car.  https://www.youtube.com/watch?v=5UBdrMTxsvs </li>
 							<li>Alex Forrest, Mustafa Konca.  Autonomous Cars and Society.  2007. https://web.wpi.edu/Pubs/E-project/Available/E-project-043007-205701/unrestricted/IQPOVP06B1.pdf</li>
 							<li>Murray, C. J. (2015, November). Teaching autonomous cars to learn: machine learning techniques will enable self-driving cars to make more effective use of sensor data. Design News, 70(11), 42+. Retrieved from http://libraries.state.ma.us/login?gwurl=http://go.galegroup.com/ps/i.do?p=GRGM&amp;sw=w&amp;u=mlin_c_worpoly&amp;v=2.1&amp;it=r&amp;id=GALE%7CA443654030&amp;sid=summon&amp;asid=78fff091fac4a8a3a7b9e4fefdff9128 http://go.galegroup.com/ps/i.do?p=GRGM&amp;u=mlin_c_worpoly&amp;id=GALE|A443654030&amp;v=2.1&amp;it=r&amp;sid=summon&amp;userGroup=mlin_c_worpoly&amp;authCount=1</li>
 							<li>Angelov, Plamen.  Autonomous Learning Systems: From Data Streams to Knowledge in Real-time.  2013. http://au4sb9ax7m.search.serialssolutions.com/?V=1.0&amp;L=AU4SB9AX7M&amp;S=JCs&amp;C=TC0000831526&amp;T=marc&amp;tab=BOOKS</li>
