moving home page

--- a/fiction/index.html
+++ b/fiction/index.html
@@ -24,13 +24,13 @@
 						<li class = "dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chapters<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="../index.html#netcomm">Networked Communications</a></li>
-								<li><a href="../index.html#ip">Intellectual Property</a></li>
-								<li><a href="../index.html#privacy">Privacy</a></li>
-								<li><a href="../index.html#security">Security</a></li>
-								<li><a href="../index.html#reliability">Reliability</a></li>
-								<li><a href="../index.html#ethics">Ethics</a></li>
-								<li><a href="../index.html#workwealth">Work &amp; Wealth</a></li>
+								<li><a href="../chapters/index.html#netcomm">Networked Communications</a></li>
+								<li><a href="../chapters/index.html#ip">Intellectual Property</a></li>
+								<li><a href="../chapters/index.html#privacy">Privacy</a></li>
+								<li><a href="../chapters/index.html#security">Security</a></li>
+								<li><a href="../chapters/index.html#reliability">Reliability</a></li>
+								<li><a href="../chapters/index.html#ethics">Ethics</a></li>
+								<li><a href="../chapters/index.html#workwealth">Work &amp; Wealth</a></li>
 							</ul>
 						</li>
 						<li><a href="../timeline/index.html#banner">Timeline</a></li>
