--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
 						<div class="page-header">
 					        <h2>Conclusions</h2>
 					    </div>
-					    <p>Autonomous vehicles will be ubiquitous before the end of our lives. Large corporations such as Google, Tesla, and Uber are investing heavily in the technology. We will make a couple conclusions below based on where autonomous vehicles will be within the near future and far future.</p>
+					    <p>Autonomous vehicles will be ubiquitous before the end of our lives. Large corporations such as Google, Tesla, and Uber are investing heavily in the technology. Machine learning is an extremely interesting field and will only make self driving cars more reliable. We will make a couple conclusions below based on where autonomous vehicles will be within the near future and far future.</p>
+					    <p>In the next year, we predict that lawmakers will attempt to catch up to the technology. There is no evidence showing that they will catch up but here's to hoping! We also expect numerous other automotive companies to announce plans for autonomous vehicles. We already see Ford and Uber looking into autonomous ride sharing platforms. Finally, with all of these competitors, we foresee an arms race to dominate the market of self driving cars.</p>
+					    <p>In five years, we expect there to be upwards of 10 million autonomous vehicles. That's 1% of the world's cars. Through more refinement and machine learning, we expect to see much less edge cases that cause catastophic accidents. With this volume of cars, the amount of data to train on will be massive and autonomous cars will essentially see every possible likely scenario and develop good decisions for those scenarios.</p>
+					    <p>In ten years, we expect the majority of the cars on the market to have some degree of autonomous capabilities. We do not expect everyone to use these features. The main issue with autonomous cars is now getting them to communicate to one another reliably in order to increase driving efficiency. We expect some companies to band together to form some kind of universal protocol for communicaions.</p>
+					    <p>In the far future, we expect Google to reshape the "owner-operator" model of automobiles. There will be much fewer cars on the road and most driving will be done through ride sharing platforms where you sign up for a car at certain times of the day and it picks you up while also delivering other passengers.</p>
 					</div>
 				</div>
 			</div>
