adding presentation link to home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 					    <p>In five years, we expect there to be upwards of 10 million autonomous vehicles. That's 1% of the world's cars. Through more refinement and machine learning, we expect to see much less edge cases that cause catastophic accidents. With this volume of cars, the amount of data to train on will be massive and autonomous cars will essentially see every possible likely scenario and develop good decisions for those scenarios.</p>
 					    <p>In ten years, we expect the majority of the cars on the market to have some degree of autonomous capabilities. We do not expect everyone to use these features. The main issue with autonomous cars is now getting them to communicate to one another reliably in order to increase driving efficiency. We expect some companies to band together to form some kind of universal protocol for communicaions.</p>
 					    <p>In the far future, we expect Google to reshape the "owner-operator" model of automobiles. There will be much fewer cars on the road and most driving will be done through ride sharing platforms where you sign up for a car at certain times of the day and it picks you up while also delivering other passengers.</p>
+
+					    <p>Check out our presentation <a href = "https://docs.google.com/presentation/d/17vjh6Lw9cQvX8eutddRc_hLPDHEPjHJLOI2qkUjlT2c/edit?usp=sharing">here</a>!</p>
 					</div>
 				</div>
 			</div>
